# lp-bot

./: .gitignore  Cargo.toml
serenity-command/: Cargo.toml
serenity-command-derive/src/: lib.rs
serenity-command-handler/src/modules/: mod.rs  quotes.rs  ready_poll.rs  spotify.rs
serenity-command/src/: lib.rs
src/: album.rs  autoreact.rs  bandcamp.rs  command_context.rs  commands.rs  db.rs  lastfm.rs  lp.rs  magik.rs  main.rs  pinboard.rs  reltime.rs  spotify.rs
src/commands/: lp.rs  ready_poll.rs
