[package]
name = "lp-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "unstable_discord_api",
    "cache",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
timezone-abbreviations = "0.1.0"
rusqlite = "0.30"
regex = "1.6"
anyhow = "1.0"
fallible-iterator = "0.2"
serenity-command-derive = { git = "https://github.com/etwyniel/discord_framework" }
serenity-command = { git = "https://github.com/etwyniel/discord_framework" }
serenity-command-handler = { git = "https://github.com/etwyniel/discord_framework" }
image = "0.24.3"
rspotify = "0.13"
