[package]
name = "lp-bot"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
timezone-abbreviations = "0.1.0"
rusqlite = "0.40"
regex = "1.6"
anyhow = "1.0"
fallible-iterator = "0.3"
serenity-command = { git = "https://github.com/etwyniel/discord_framework" }
serenity-command-handler = { git = "https://github.com/etwyniel/discord_framework" }
serenity-modules = {
    git = "https://github.com/etwyniel/discord_framework",
    features = [
        "polls",
        "tidal",
        "bdays",
        "bandcamp",
        "lastfm",
        "spotify",
        "spotify_activity",
        "album-lookup",
        "autoreact",
        "lp",
        "quotes",
        "pinboard",
        "sql",
        "forms",
        "playlist_builder",
    ]
}
rspotify = "0.13"
rustls = "0.23"
